# pipeline-multichannel

./: README.md  application.json  install.sh  metadata.json
.project/: pluginsInfo.json
plugins/genericboxdecode/davinci/cfg/: boxdecode_yolov7.json  boxdecode_yolov8-pose.json  boxdecode_yolov9s.json
plugins/genericboxdecode/modalix/cfg/: boxdecode_detr.json  boxdecode_yolov8-pose.json  boxdecode_yolov8n.json  boxdecode_yolov9s.json
plugins/genericrender/: render.json
plugins/genericrender/cfg/: generic_renderer_yolov8_pose0.json  generic_renderer_yolov8_pose1.json  generic_renderer_yolov8_pose2.json  generic_renderer_yolov8_pose3.json
plugins/processcvu/davinci/cfg/: gen_preproc_detr0.json  gen_preproc_detr1.json  gen_preproc_detr2.json  gen_preproc_detr3.json  gen_preproc_yolov7_0.json  gen_preproc_yolov7_2.json  gen_preproc_yolov7_3.json  gen_preproc_yolov8_pose0.json  gen_preproc_yolov8_pose1.json  gen_preproc_yolov8_pose2.json  gen_preproc_yolov8_pose3.json  gen_preproc_yolov8n0.json  gen_preproc_yolov8n1.json  gen_preproc_yolov9s1.json  gen_preproc_yolov9s2.json  gen_preproc_yolov9s3.json
plugins/processcvu/modalix/cfg/: gen_preproc_detr0.json  gen_preproc_detr1.json  gen_preproc_detr2.json  gen_preproc_detr3.json  gen_preproc_yolov7_0.json  gen_preproc_yolov7_1.json  gen_preproc_yolov7_2.json  gen_preproc_yolov8_pose0.json  gen_preproc_yolov8_pose1.json  gen_preproc_yolov8_pose2.json  gen_preproc_yolov8_pose3.json  gen_preproc_yolov8n0.json  gen_preproc_yolov8n1.json  gen_preproc_yolov8n2.json  gen_preproc_yolov8n3.json  gen_preproc_yolov9s0.json  gen_preproc_yolov9s2.json
plugins/processmla/davinci/cfg/: yolov7_mla.json  yolov9s_mla.json
plugins/processmla/modalix/cfg/: yolov7_mla.json  yolov8-pose_mla.json  yolov8_mla.json  yolov9s_mla.json
plugins/simaaiopenlabelconverter/: CMakeLists.txt  payload.cpp
plugins/simaaiopenlabelconverter/cfg/: simaaiopenlabelconverter_yolov9s.json
